@@ -1,3 +1,7 @@
+2008-06-18  Rafael Espindola  <espindola@google.com>
+
+	* config-ml.in: don't handle --enable-shared and --enable-static.
+
 2008-06-18  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	* lib/am/inst-vars.am (am__install_max): New variable.
